ajout de scripts pour populer la DB et lancer l'API en prod

--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
 	"scripts": {
 		"start": "node ./src/server.js",
 		"dev": "nodemon ./src/server.js --watch src",
+		"prod": "NODE_ENV=production node ./src/server.js",
 		"test": "NODE_ENV=test mocha --recursive test/graphql/services --exit",
-		"test-jest": "NODE_ENV=test jest --detectOpenHandles --runInBand"
+		"test-jest": "NODE_ENV=test jest --detectOpenHandles --runInBand",
+		"populateDB-dev": "NODE_ENV=development mocha ./test/populateDatabase.js",
+		"populateDB-test": "NODE_ENV=test mocha ./test/populateDatabase.js",
+		"populateDB-prod": "NODE_ENV=production mocha ./test/populateDatabase.js"
 	},
 	"dependencies": {
 		"apollo-server-express": "^2.2.5",
