--- a/graphql.config.json
+++ b/graphql.config.json
@@ -25,8 +25,8 @@
   "README_endpoints": "A list of GraphQL endpoints that can be queried from '.graphql' files in the IDE",
   "endpoints" : [
     {
-      "name": "Default (http://localhost:8080/graphql)",
-      "url": "http://localhost:8080/graphql",
+      "name": "Default (https://te-tweb-api.herokuapp.com/graphql)",
+      "url": "https://te-tweb-api.herokuapp.com/graphql",
       "options" : {
         "headers": {
           "user-agent" : "JS GraphQL"
